--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </main>
   {% if page.custom_js %}
   {% for js_file in page.custom_js %}
-  <script src="{{ site.baserl }}/js/{{ js_file }}.js" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}/js/{{ js_file }}.js" type="text/javascript"></script>
   {% endfor %}
   {% endif %}
   {% if site.google_analytics %}
